*********

BIOM-Format 1.1.2-dev (changes since BIOM-Format 1.1.2 go here)
===============================================================

New Features
------------

* Table.collapseObservationsByMetadata and Table.collapseSamplesByMetadata now have an additional argument, include_collapsed_metadata, which allows the user to either include or exclude collapsed metadata in the collapsed table.
* Table.delimitedSelf now has an additional argument, observation_column_name, which allows the user to specify the name of the first column in the output table (e.g. 'OTU ID', 'Taxon', etc.).
* Added new Table.transpose method.

Changes
-------

Bug Fixes
---------

BIOM-Format 1.1.1 - 1.1.2
=========================

New Features
------------

* Table.collapseObservationsByMetadata and Table.collapseSamplesByMetadata now
support one-to-many relationships on the metadata field to collapse on.

* added new script called print_biom_table_summary.py (and accompanying tutorial) that prints summary statistics of the input BIOM table as a whole and on a per-sample basis

Changes
-------

* SparseMat now uses cython for loops more efficiently

Bug Fixes
---------

* fixed serious performance issue with Table.transformSamples/Observations when using CSMat as the sparse backend

BIOM-Format 1.1.0 - 1.1.1
=========================

New Features
------------

Changes
-------

* added documentation for how to switch sparse backends via BIOM config file

Bug Fixes
---------

* performance issue on table creation with CSMat where an O(N) lookup was being performed

BIOM-Format 1.0.0 - 1.1.0
=========================

New Features
------------

* new default sparse matrix backend CSMat (COO/CSR/CSC) more efficient than SparseDict and SparseMat (pure python + numpy)